add variable in env.example

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,4 @@
-### web-gateway/.env
-```
-PORT=
-RABBITMQ_URL=
-```
-
-### jwt-service/.env
-```
-RABBITMQ_URL=
+PORT=3000
+RABBITMQ_URL=amqp://rabbitmq:5672
 JWT_SECRET=
-JWT_EXPIRATION=
-```
+JWT_EXPIRATION=1h
